[package]
name = "rtime-metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Prometheus metrics exporter for rTime"

[dependencies]
rtime-core = { workspace = true }
axum = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
