[package]
name = "rtime-nts"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Network Time Security (NTS) for rTime"

[dependencies]
rtime-core = { workspace = true }
thiserror = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = "1"
aes-siv = "0.7"
rand = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
zeroize = { version = "1", features = ["derive"] }
