[package]
name = "rtime-refclock"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Reference clock drivers (GPS/PPS) for rTime"

[dependencies]
rtime-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
libc = { workspace = true }

[features]
default = []
gps = []
pps = []
